<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ash.cleantind_dgu_cse_se.tab2.HostRegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="                           집 등록"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="15sp"
                android:id="@+id/textView3" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="10dp"
                android:id="@+id/HostingBtn" />
        </LinearLayout>
        <!--등록버튼은 간단한 이미지로 하는게 좋을거 같음
          android:background="@drawable/RegBtn"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.4"
        android:weightSum="10"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:weightSum="10"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="74dp"
                        android:text="@string/hinfo"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:background="#FF8"

                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:weightSum="10"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/hostImage"
                        android:layout_weight="8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/defaultprofile"
                        />
                    <Button
                        android:id="@+id/hostImageAddBtn"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="집 사진추가"/>
                </LinearLayout>
                <!-- 이미지를 자신의 핸드폰 사진에서 고를 수 있어야 한다.-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:orientation="vertical"
                android:weightSum="10"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    android:weightSum="10"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/name"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:background="#FF0">

                        <EditText
                            android:id="@+id/editHName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="정한솔"
                            android:singleLine="true"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    android:weightSum="10"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/gender"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:background="#FF0">
                        <EditText
                            android:id="@+id/editHGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="sex"
                            android:singleLine="true"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:weightSum="10"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ploc"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:textSize="15sp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:weightSum="10"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5">
                            <EditText
                                android:id="@+id/editHCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/city"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5">
                            <EditText
                                android:id="@+id/editHTown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/town"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:weightSum="10"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="평수\n/형태"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:weightSum="10"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                    <EditText
                        android:id="@+id/editDwell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="아파트 or 단독주택"
                        android:singleLine="true"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                    <EditText
                        android:id="@+id/editArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="평수"
                        android:singleLine="true"
                        android:inputType="number"
                        android:textSize="15sp"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:weightSum="10"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:weightSum="10"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:weightSum="10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/datetoclean"
                            android:gravity="center"
                            android:padding="5dp"
                            android:id="@+id/possibleDate2"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:gravity="center">

                        <Button
                            android:id="@+id/dateBtn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setdate"
                            android:textSize="10dp"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:weightSum="10"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dayhourtoclean"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textSize="15sp"
                            android:id="@+id/possibleHour2" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:gravity="center">

                        <Button
                            android:id="@+id/dayhourBtn2"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setdayhour"
                            android:textSize="10dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.7"
            android:weightSum="10"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pdetail"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8">

                <EditText
                    android:id="@+id/editHDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="6"
                    android:gravity="top|left"
                    android:inputType="textCapSentences|textMultiLine"
                    android:scrollHorizontally="false"
                    android:minWidth="10dp"
                    android:maxWidth="5dp"
                    android:hint="@string/somethingtotalk"
                    />
                <!--gravity cursor multi line text edit-->
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>